--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,3 +1,12 @@
+
+
+<!--
+ * @Author: Alchemistyui
+ * @Date: 2021-01-09 18:14:32
+ * @LastEditTime: 2022-08-13 14:34:23
+ * @FilePath: /_layouts/post.html
+ * Copyright (c) 2022 by Alchemistyui, All Rights Reserved.
+-->
 ---
 layout: compress
 ---
@@ -11,7 +20,6 @@ layout: compress
 
 <body>
   {% include navbar.html %}
-
   <section class="hero is-fullheight has-text-centered" id="post">
     <div class="hero-body">
       <div class="container">
