fix bugs in education info

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,9 +1,9 @@
 <!--
  * @Author: error: git config user.name && git config user.email & please set dead value or install git
  * @Date: 2021-01-09 18:14:32
- * @LastEditors: error: git config user.name && git config user.email & please set dead value or install git
- * @LastEditTime: 2022-08-12 22:00:48
- * @FilePath: /alchemistyui.github.io-master/_includes/contact.html
+ * @LastEditors: Please set LastEditors
+ * @LastEditTime: 2022-08-14 11:07:54
+ * @FilePath: /_includes/contact.html
  * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
 -->
 <section class="hero is-fullheight has-text-centered">
@@ -13,7 +13,7 @@
             <div class="column has-text-left-desktop has-text-left-tablet has-text-left-fullhd has-text-left-widescreen">
                 <p><font size="+3"><b>Education<br></font></b>
                         <li> 2016.09-2020.06, University of Electronic Science and Technology of China (UESTC), Software Engineering, Bachelor<br></li>
-                        <li> 2020.09-2022.09, Tokyo Institute of TechnologyTokyo Institute of Technology (Tokyo Tech), Artificial Intelligence, Master<br></li>
+                        <li> 2020.09-2022.09, Tokyo Institute of Technology (Tokyo Tech), Artificial Intelligence, Master<br></li>
                     <br></p>
                 <p><font size="+3"><b>Internship/Exchange<br></font></b>
                         <li> 2017.07-2017.08, National University of Singapore (NUS) Summer Programme, Interaction Design</li>
