fix bug, add gcn blog

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -16,12 +16,16 @@
                 <p><font size="+3"><b>Education<br></font></b>
                         <li> 2016.09-2020.06, University of Electronic Science and Technology of China (UESTC), Software Engineering, Bachelor<br></li>
                         <li> 2020.09-2022.09, Tokyo Institute of Technology (Tokyo Tech), Artificial Intelligence, Master<br></li>
+                        <li> 2022.10-, Tokyo Institute of Technology (Tokyo Tech), Artificial Intelligence, Doctor<br></li>
                     <br></p>
                 <p><font size="+3"><b>Internship/Exchange<br></font></b>
                         <li> 2017.07-2017.08, National University of Singapore (NUS) Summer Programme, Interaction Design</li>
                         <li> 2019.01-2019.07, Malong Technologies, Shenzhen, China, Algorithm Internship<br></li>
                         <li> 2021.04-, Research Assistant, Tokyo Tech</li>
                         <li> 2022.09-2022.10, TOSHIBA Research & Development Center (RDC), Tokyo, Japan, Knowledge Graph<br></li>
+                    <br></p>
+                <p><font size="+3"><b>Publications<br></font></b>
+                        <li> Shen R, Inoue N, Shinoda K. "Text-Guided Object Detector for Multi-modal Video Question Answering." Proceedings of the IEEE/CVF Winter Conference on Applications of Computer Vision (WACV 2023)</li>
                     <br></p>
                 <p><font size="+3"><b>Awards<br></font></b>
                         <li> 2016-2019, The first prize of Excellent Student Scholarships, UESTC<br></li>
@@ -30,9 +34,8 @@
                         <li> 2020, Monbukagakusho Honors Scholarship, JASSO</li>
                     <br></p>
                 <p><font size="+3"><b>Skills<br></font></b>
-                        <li> Python, Pytorch, </li>
+                        <li> Python, Pytorch </li>
                         <li> Language: English (TOEFL iBT 89/120; TOEIC 875/990), Japansese (JLPT N2 178/180), Chinese (native)<br></li>
-                        <li> 2022.09-2022.10, TOSHIBA Research & Development Center (RDC), Tokyo, Japan, Knowledge Graph<br></li>
                     <br></p>
                 <p><font size="+3"><b>Interests</font></b>
                                 <br><br><li> Animation, Music&#9835;~<br></li></p>
