--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,5 +12,5 @@
     <title>{{site.title}}</title>
     <link rel="stylesheet" href="{% if site.baseurl %}{{site.baseurl}}{% else %}{% endif %}/assets/css/style.css">
     <script src="https://kit.fontawesome.com/6a97161b76.js" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="{% if site.favicon-url %}{{site.favicon-url}}{% else %}{{ 'assets/images/moon.png' | absolute_url }}{% endif %}" type="image/x-icon">
+    <link rel="shortcut icon" href="{% if site.favicon-url %}{{site.favicon-url}}{% else %}{{ 'assets/images/sites/moon.png' | absolute_url }}{% endif %}" type="image/x-icon">
 </head>
