fix bug for publications

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,7 +2,7 @@
  * @Author: Alchemistyui
  * @Date: 2022-10-26
  * @LastEditTime: 2022-10-27
- * @FilePath: /alchemistyui.github.io/_includes/contact.html
+ * @FilePath: /personal_page/_includes/contact.html
  * @Description: 
  * 
  * Copyright (c) 2022, All Rights Reserved. 
@@ -24,7 +24,7 @@
                         <li> 2021.04-, Research Assistant, Tokyo Tech</li>
                         <li> 2022.09-2022.10, TOSHIBA Research & Development Center (RDC), Tokyo, Japan, Knowledge Graph<br></li>
                     <br></p>
-                <p><font size="+3"><b>Publications<br></font></b>
+                <p><font size="+3"><b>Selected Publications<br></font></b>
                         <li> Shen R, Inoue N, Shinoda K. "Text-Guided Object Detector for Multi-modal Video Question Answering." Proceedings of the IEEE/CVF Winter Conference on Applications of Computer Vision (WACV 2023)</li>
                     <br></p>
                 <p><font size="+3"><b>Awards<br></font></b>
