add generative and discriminative models blogs, add latex config

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,8 +1,8 @@
 <!--
  * @Author: Alchemistyui
  * @Date: 2022-10-26
- * @LastEditTime: 2022-10-27
- * @FilePath: /alchemistyui.github.io/_includes/head.html
+ * @LastEditTime: 2022-11-02
+ * @FilePath: /personal_page/_includes/head.html
  * @Description: 
  * 
  * Copyright (c) 2022, All Rights Reserved. 
