--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,12 +1,23 @@
 <!--
  * @Author: Alchemistyui
  * @Date: 2022-10-26
- * @LastEditTime: 2022-10-27
- * @FilePath: /alchemistyui.github.io/_layouts/post.html
+ * @LastEditTime: 2022-11-02
+ * @FilePath: /personal_page/_layouts/post.html
  * @Description: 
  * 
  * Copyright (c) 2022, All Rights Reserved. 
 -->
+
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+<script> 
+    MathJax = {
+      tex: {
+        inlineMath: [['$', '$']],
+        processEscapes: true
+      }
+    };
+</script>
 
 ---
 layout: compress
