add DDPM, Imporved DDPM, and fix the problem of formula in md (need write \ or \_)

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: Alchemistyui
  * @Date: 2022-10-26
- * @LastEditTime: 2022-10-27
+ * @LastEditTime: 2022-12-04
  * @FilePath: /personal_page/_includes/contact.html
  * @Description: 
  * 
@@ -32,6 +32,10 @@
                         <li> 2017-2018, China National Scholarship, Ministry of Education, PRC<br></li>
                         <li> 2020, Graduated with Honors, UESTC</li>
                         <li> 2020, Monbukagakusho Honors Scholarship, JASSO</li>
+                        <li> 2021-2022, Super Smart Society Core Technology Research Project Incentive, WISE-SSS</li>
+                        <li> 2022-, Super Smart Society Leadership Scholarship for Doctoral Students, WISE-SSS</li>
+                        <li> 2022-, Tokyo Tech Tsubame Scholarship for Doctoral Students, Tokyo Tech</li>
+                        
                     <br></p>
                 <p><font size="+3"><b>Skills<br></font></b>
                         <li> Python, Pytorch </li>
