--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: Alchemistyui
  * @Date: 2022-10-26
- * @LastEditTime: 2022-12-04
+ * @LastEditTime: 2023-05-19
  * @FilePath: /personal_page/_includes/contact.html
  * @Description: 
  * 
@@ -18,11 +18,13 @@
                         <li> 2020.09-2022.09, Tokyo Institute of Technology (Tokyo Tech), Artificial Intelligence, Master<br></li>
                         <li> 2022.10-, Tokyo Institute of Technology (Tokyo Tech), Artificial Intelligence, Doctor<br></li>
                     <br></p>
-                <p><font size="+3"><b>Internship/Exchange<br></font></b>
-                        <li> 2017.07-2017.08, National University of Singapore (NUS) Summer Programme, Interaction Design</li>
-                        <li> 2019.01-2019.07, Malong Technologies, Shenzhen, China, Algorithm Internship<br></li>
-                        <li> 2021.04-, Research Assistant, Tokyo Tech</li>
-                        <li> 2022.09-2022.10, TOSHIBA Research & Development Center (RDC), Tokyo, Japan, Knowledge Graph<br></li>
+                <!-- <p><font size="+3"><b>Internship/Exchange<br></font></b> -->
+                <p><font size="+3"><b>Experiences<br></font></b>
+                        <li> 2017.07-2017.08, Interaction Design Course, National University of Singapore (NUS) Summer Programme</li>
+                        <li> 2019.01-2019.07, Algorithm Internship, Malong Technologies, Shenzhen, China<br></li>
+                        <li> 2021.04-, Research Assistant, Tokyo Institute of Technology (Tokyo Tech), Tokyo, Japan</li>
+                        <li> 2022.09-2022.10, Knowledge Graph Internship, TOSHIBA Research & Development Center (RDC), Tokyo, Japan<br></li>
+                        <li> 2023.04-2024.03, 学生研究員, New Energy and Industrial Technology Development Organization (NEDO), Kanagawa, Japan<br></li>
                     <br></p>
                 <p><font size="+3"><b>Selected Publications<br></font></b>
                         <li> Shen R, Inoue N, Shinoda K. "Text-Guided Object Detector for Multi-modal Video Question Answering." Proceedings of the IEEE/CVF Winter Conference on Applications of Computer Vision (WACV 2023)</li>
