--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: Alchemistyui
  * @Date: 2022-10-26
- * @LastEditTime: 2023-05-19
+ * @LastEditTime: 2023-07-07
  * @FilePath: /personal_page/_includes/contact.html
  * @Description: 
  * 
@@ -18,6 +18,18 @@
                         <li> 2020.09-2022.09, Tokyo Institute of Technology (Tokyo Tech), Artificial Intelligence, Master<br></li>
                         <li> 2022.10-, Tokyo Institute of Technology (Tokyo Tech), Artificial Intelligence, Doctor<br></li>
                     <br></p>
+
+                    <p><font size="+3"><b>Selected Publications<br></font></b>
+                        <li> Shen R, Inoue N, Shinoda K. <a href="https://openaccess.thecvf.com/content/WACV2023/papers/Shen_Text-Guided_Object_Detector_for_Multi-Modal_Video_Question_Answering_WACV_2023_paper.pdf">"Text-Guided Object Detector for Multi-modal Video Question Answering."</a>, Proceedings of the IEEE/CVF Winter Conference on Applications of Computer Vision (WACV 2023)</li>
+                    <br></p>
+                    <p><font size="+3"><b>Presentations<br></font></b>
+                        <li> 2023.01.04 IEEE/CVF Winter Conference on Applications of Computer Vision (WACV 2023), Waikoloa, Hawaii.
+                             <a href="https://drive.google.com/file/d/12KiaWtyATjm0BlQlJTB0krQr62vAiZsb/edit">Text-Guided Object Detector for Multi-modal Video Question Answering.</a>
+                        </li>
+                        <li> 2023.06.29 Seventh International Workshop on Symbolic-Neural Learning (SNL2023), RIKEN, AIP, Tokyo, Japan.
+                            <a href="http://liat-aip.sakura.ne.jp/snl2023/program.html">Text-Guided Object Detector for Multi-modal Video Question Answering.</a>
+                       </li>
+                    <br></p>
                 <!-- <p><font size="+3"><b>Internship/Exchange<br></font></b> -->
                 <p><font size="+3"><b>Experiences<br></font></b>
                         <li> 2017.07-2017.08, Interaction Design Course, National University of Singapore (NUS) Summer Programme</li>
@@ -26,9 +38,7 @@
                         <li> 2022.09-2022.10, Knowledge Graph Internship, TOSHIBA Research & Development Center (RDC), Tokyo, Japan<br></li>
                         <li> 2023.04-2024.03, 学生研究員, New Energy and Industrial Technology Development Organization (NEDO), Kanagawa, Japan<br></li>
                     <br></p>
-                <p><font size="+3"><b>Selected Publications<br></font></b>
-                        <li> Shen R, Inoue N, Shinoda K. "Text-Guided Object Detector for Multi-modal Video Question Answering." Proceedings of the IEEE/CVF Winter Conference on Applications of Computer Vision (WACV 2023)</li>
-                    <br></p>
+                
                 <p><font size="+3"><b>Awards<br></font></b>
                         <li> 2016-2019, The first prize of Excellent Student Scholarships, UESTC<br></li>
                         <li> 2017-2018, China National Scholarship, Ministry of Education, PRC<br></li>
