change photo and update paper info

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,8 +1,8 @@
 <!--
  * @Author: Alchemistyui
  * @Date: 2022-10-26
- * @LastEditTime: 2023-07-07
- * @FilePath: /personal_page/_includes/contact.html
+ * @LastEditTime: 2024-06-11
+ * @FilePath: /alchemistyui.github.io/_includes/contact.html
  * @Description: 
  * 
  * Copyright (c) 2022, All Rights Reserved. 
@@ -16,11 +16,13 @@
                 <p><font size="+3"><b>Education<br></font></b>
                         <li> 2016.09-2020.06, University of Electronic Science and Technology of China (UESTC), Software Engineering, Bachelor<br></li>
                         <li> 2020.09-2022.09, Tokyo Institute of Technology (Tokyo Tech), Artificial Intelligence, Master<br></li>
-                        <li> 2022.10-, Tokyo Institute of Technology (Tokyo Tech), Artificial Intelligence, Doctor<br></li>
+                        <li> 2022.09-2025.09, Tokyo Institute of Technology (Tokyo Tech), Artificial Intelligence, Doctor<br></li>
+                        <li> 2023.12-2024.3, Nanyang Technological University (NTU), Visiting student, ROSE Lab<br></li>
                     <br></p>
 
                     <p><font size="+3"><b>Selected Publications<br></font></b>
                         <li> Shen R, Inoue N, Shinoda K. <a href="https://openaccess.thecvf.com/content/WACV2023/papers/Shen_Text-Guided_Object_Detector_for_Multi-Modal_Video_Question_Answering_WACV_2023_paper.pdf">"Text-Guided Object Detector for Multi-modal Video Question Answering."</a>, Proceedings of the IEEE/CVF Winter Conference on Applications of Computer Vision (WACV 2023)</li>
+                        <li> Shen R, Inoue N, Shinoda K. <a href="https://2024.ieeeicip.org/">"Pyramid Coder: Hierarchical Code Generator for Compositional Visual Question Answering."</a>, the 2024 IEEE International Conference on Image Processing (ICIP 2024)</li>
                     <br></p>
                     <p><font size="+3"><b>Presentations<br></font></b>
                         <li> 2023.01.04 IEEE/CVF Winter Conference on Applications of Computer Vision (WACV 2023), Waikoloa, Hawaii.
@@ -29,6 +31,9 @@
                         <li> 2023.06.29 Seventh International Workshop on Symbolic-Neural Learning (SNL2023), RIKEN, AIP, Tokyo, Japan.
                             <a href="http://liat-aip.sakura.ne.jp/snl2023/program.html">Text-Guided Object Detector for Multi-modal Video Question Answering.</a>
                        </li>
+                       <li> 2024.06.27 Eighth International Workshop on Symbolic-Neural Learning (SNL2024), Miraikan hall, Odaiba Miraikan, Tokyo, Japan.
+                        <a href="https://www.airc.aist.go.jp/snl/snl2024.html">Hierarchical Code Generator for Compositional Visual Question Answering.</a>
+                   </li>
                     <br></p>
                 <!-- <p><font size="+3"><b>Internship/Exchange<br></font></b> -->
                 <p><font size="+3"><b>Experiences<br></font></b>
