--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: Alchemistyui
  * @Date: 2022-10-26
- * @LastEditTime: 2024-06-11
+ * @LastEditTime: 2024-06-12
  * @FilePath: /alchemistyui.github.io/_includes/contact.html
  * @Description: 
  * 
@@ -50,8 +50,9 @@
                         <li> 2020, Graduated with Honors, UESTC</li>
                         <li> 2020, Monbukagakusho Honors Scholarship, JASSO</li>
                         <li> 2021-2022, Super Smart Society Core Technology Research Project Incentive, WISE-SSS</li>
-                        <li> 2022-, Super Smart Society Leadership Scholarship for Doctoral Students, WISE-SSS</li>
-                        <li> 2022-, Tokyo Tech Tsubame Scholarship for Doctoral Students, Tokyo Tech</li>
+                        <li> 2022-2024, Super Smart Society Leadership Scholarship for Doctoral Students, WISE-SSS</li>
+                        <li> 2022-2024, Tokyo Tech Tsubame Scholarship for Doctoral Students, Tokyo Tech</li>
+                        <li> 2024.04-2025.04, Tokyo Tech Program for Development of Next-Generation Front-Runners with Comprehensive Knowledge and Humanity (Tokyo Tech SPRING), Tokyo Tech</li>
                         
                     <br></p>
                 <p><font size="+3"><b>Skills<br></font></b>
